<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tomerbu.edu.intentsdemo.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:hint="@string/et_query_hint"
        android:layout_height="wrap_content"
        android:id="@+id/etQuery"
        android:drawableRight="@android:drawable/ic_menu_search"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dial"
        android:id="@+id/btnDial"
        android:onClick="dial"
        android:layout_alignTop="@+id/btnWebPage"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:onClick="webPage"
        android:layout_height="wrap_content"
        android:text="@string/view_web_page"
        android:id="@+id/btnWebPage"

        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map"
        android:onClick="showMap"
        android:id="@+id/btnGeo"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etQuery"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:onClick="youtubeSearch"
            android:src="@mipmap/ic_youtube"
            android:background="#FFFFFF"
            android:layout_height="wrap_content"
            android:id="@+id/btnYoutube"
            android:layout_weight="1"
            android:contentDescription="@string/youtube_icon" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:background="#fff"
            android:layout_width="0dp"
            android:onClick="googleSearch"
            android:src="@mipmap/ic_google_search"
            android:layout_height="wrap_content"
            android:id="@+id/btnGoogleSearch"
            android:layout_weight="1"
            android:contentDescription="@string/google_icon" />

        <ImageButton
            style="?android:attr/buttonStyleSmall"
            android:layout_width="0dp"
            android:background="#fff"
            android:onClick="androidDevSearch"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_android_dev"
            android:id="@+id/btnAndroidDev"
            android:layout_weight="1"
            android:contentDescription="@string/android_dev_icon" />
    </LinearLayout>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="setAlarm"
        android:onClick="setAlarm"
        android:id="@+id/button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
